# paypay

./: .env  .gitignore  Dockerfile  alembic.ini  pyproject.toml  test.json  token.txt
.github/workflows/: deploy.yml  lint.yml  test.yml
src/: __init__.py
src/migrations/: env.py
src/migrations/versions/: 2185036a05a6_create_payment_table.py  a078a06707bc_create_user_table.py
src/paypay/controllers/: payment.py  user.py
src/paypay/converters/: payment.py  user.py
src/paypay/entrypoint/http/: errors.py  main.py
src/paypay/entrypoint/http/dependencies/: commons.py  payment.py  user.py
src/paypay/entrypoint/http/endpoints/: login.py  payment.py  user.py
src/paypay/exeptions/: payment.py  user.py
src/paypay/forms/: payment.py  user.py
src/paypay/infra/: database.py  password.py  settings.py  token.py
src/paypay/models/: payment.py  user.py
src/paypay/repositories/: database.py  payment.py  user.py
tests/: decorator_test.py  paypay_client.py  test_paypay.py  test_paypay_heroku.py  test_selenium.py
