[tool.poetry]
name = "paypay"
version = "0.1.0"
description = ""
authors = ["Fernando <fwfurtado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
black = "^20.8b1"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
mypy_path="src/"
namespace_packages=true
warn_unused_ignores=true
pretty=true