[tool.poetry]
name = "paypay"
version = "0.1.0"
description = ""
authors = ["Fernando <fwfurtado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
argon2-cffi = "^20.1.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.5"
alembic = "^1.5.8"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
black = "^20.8b1"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
mypy_path="src/"
namespace_packages=true
warn_unused_ignores=true
pretty=true